# src/modules/products/products.serializer.ts
@@ -8,10 +8,23 @@ export class ProductsSerializer extends AbstractBaseSerializer {
   protected serializeOneOptions: TSerializationOptions = {
     skipNull: true,
     forceObject: true,
+    populate: ["owner.userProfile"],
+    exclude: [
+      "owner.password",
+      "owner.email",
+      "owner.createdAt",
+      "owner.updatedAt",
+      "owner.userProfile.id",
+      "owner.userProfile.role",
+      "owner.userProfile.email",
+      "owner.userProfile.createdAt",
+      "owner.userProfile.updatedAt",
+    ],
   };
 
   protected serializeManyOptions: TSerializationOptions = {
     skipNull: true,
     forceObject: true,
+    exclude: ["owner"],
   };
 }
