# src/modules/sales/sales.dtos.ts
@@ -1,0 +1,9 @@
+import { ApiProperty } from "@nestjs/swagger";
+
+import { IsNumber } from "class-validator";
+
+export class CreateSaleDto {
+  @ApiProperty()
+  @IsNumber()
+  productId!: number;
+}
